--- a/Workouts/Workouts/Base.lproj/Main.storyboard
+++ b/Workouts/Workouts/Base.lproj/Main.storyboard
@@ -84,22 +84,17 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yLZ-Dg-yBz">
-                                                <rect key="frame" x="20" y="118" width="374" height="34"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Target areas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fkv-YV-QpJ">
-                                                <rect key="frame" x="20" y="192" width="94.5" height="21"/>
+                                                <rect key="frame" x="20" y="128" width="94.5" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VH7-RU-146">
-                                                <rect key="frame" x="20" y="233" width="374" height="60"/>
+                                                <rect key="frame" x="20" y="169" width="374" height="50"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="60" id="07c-pr-OX9"/>
+                                                    <constraint firstAttribute="height" constant="50" id="07c-pr-OX9"/>
                                                 </constraints>
                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JoO-MQ-q1l">
                                                     <size key="itemSize" width="128" height="128"/>
@@ -109,7 +104,7 @@
                                                 </collectionViewFlowLayout>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="6e0-Go-8YG">
-                                                        <rect key="frame" x="0.0" y="-34" width="128" height="128"/>
+                                                        <rect key="frame" x="0.0" y="-39" width="128" height="128"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="GCO-zY-MgD">
                                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -119,13 +114,13 @@
                                                 </cells>
                                             </collectionView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exercises" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l4H-gL-3Sv">
-                                                <rect key="frame" x="20" y="333" width="72" height="21"/>
+                                                <rect key="frame" x="20" y="259" width="72" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RS7-lb-rca">
-                                                <rect key="frame" x="20" y="374" width="374" height="260"/>
+                                                <rect key="frame" x="20" y="300" width="374" height="293"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="PCq-lV-zO2">
@@ -141,34 +136,38 @@
                                                     </tableViewCell>
                                                 </prototypes>
                                             </tableView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j42-6i-gar">
+                                                <rect key="frame" x="40" y="683" width="334" height="30"/>
+                                                <state key="normal" title="Start"/>
+                                            </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Of9-Kc-1FB">
-                                                <rect key="frame" x="40" y="684" width="334" height="30"/>
-                                                <state key="normal" title="Button"/>
+                                                <rect key="frame" x="40" y="633" width="334" height="30"/>
+                                                <state key="normal" title="Save"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="Fkv-YV-QpJ" firstAttribute="top" secondItem="bTo-tC-UfW" secondAttribute="bottom" constant="30" id="0lg-sf-Kgb"/>
                                             <constraint firstItem="bTo-tC-UfW" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="1m5-A3-zFs"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="l4H-gL-3Sv" secondAttribute="trailing" constant="20" symbolic="YES" id="2rS-dD-flj"/>
-                                            <constraint firstItem="Of9-Kc-1FB" firstAttribute="top" secondItem="RS7-lb-rca" secondAttribute="bottom" constant="50" id="DCU-62-VG5"/>
+                                            <constraint firstItem="Of9-Kc-1FB" firstAttribute="top" secondItem="RS7-lb-rca" secondAttribute="bottom" constant="40" id="DCU-62-VG5"/>
                                             <constraint firstItem="Fkv-YV-QpJ" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="FHm-Yl-j2m"/>
                                             <constraint firstAttribute="trailing" secondItem="VH7-RU-146" secondAttribute="trailing" constant="20" id="JTQ-cL-cjQ"/>
                                             <constraint firstAttribute="trailing" secondItem="f6A-GA-lBR" secondAttribute="trailing" constant="20" id="KdN-CY-61Z"/>
                                             <constraint firstItem="f6A-GA-lBR" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="Q3D-nY-i3u"/>
+                                            <constraint firstItem="j42-6i-gar" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="40" id="QtI-OQ-40C"/>
                                             <constraint firstItem="l4H-gL-3Sv" firstAttribute="top" secondItem="VH7-RU-146" secondAttribute="bottom" constant="40" id="TNW-el-e72"/>
                                             <constraint firstItem="RS7-lb-rca" firstAttribute="top" secondItem="l4H-gL-3Sv" secondAttribute="bottom" constant="20" id="Tqf-rW-C70"/>
-                                            <constraint firstAttribute="bottom" secondItem="Of9-Kc-1FB" secondAttribute="bottom" constant="19" id="Vyk-NO-GO0"/>
-                                            <constraint firstItem="Fkv-YV-QpJ" firstAttribute="top" secondItem="yLZ-Dg-yBz" secondAttribute="bottom" constant="40" id="aZQ-bB-ivy"/>
+                                            <constraint firstItem="j42-6i-gar" firstAttribute="top" secondItem="Of9-Kc-1FB" secondAttribute="bottom" constant="20" id="Zis-HL-hfl"/>
                                             <constraint firstItem="VH7-RU-146" firstAttribute="top" secondItem="Fkv-YV-QpJ" secondAttribute="bottom" constant="20" id="dCu-el-WJQ"/>
                                             <constraint firstAttribute="trailing" secondItem="RS7-lb-rca" secondAttribute="trailing" constant="20" id="g7N-Qq-WJ3"/>
-                                            <constraint firstItem="yLZ-Dg-yBz" firstAttribute="top" secondItem="bTo-tC-UfW" secondAttribute="bottom" constant="20" id="gNA-Fk-Vvz"/>
-                                            <constraint firstAttribute="trailing" secondItem="yLZ-Dg-yBz" secondAttribute="trailing" constant="20" id="iS6-97-Zwo"/>
                                             <constraint firstItem="bTo-tC-UfW" firstAttribute="top" secondItem="f6A-GA-lBR" secondAttribute="bottom" constant="20" id="kYX-Rq-v27"/>
                                             <constraint firstItem="VH7-RU-146" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="mGo-NQ-SpD"/>
                                             <constraint firstAttribute="trailing" secondItem="bTo-tC-UfW" secondAttribute="trailing" constant="20" id="o7j-8R-C52"/>
-                                            <constraint firstItem="yLZ-Dg-yBz" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="uCU-zo-SBW"/>
+                                            <constraint firstAttribute="bottom" secondItem="j42-6i-gar" secondAttribute="bottom" constant="20" id="tHh-gT-Tpa"/>
                                             <constraint firstItem="l4H-gL-3Sv" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="uW1-Jn-ili"/>
                                             <constraint firstItem="RS7-lb-rca" firstAttribute="leading" secondItem="xWr-Zl-WNl" secondAttribute="leading" constant="20" id="vcf-fV-Dev"/>
+                                            <constraint firstAttribute="trailing" secondItem="j42-6i-gar" secondAttribute="trailing" constant="40" id="wDT-sC-gd1"/>
                                             <constraint firstItem="f6A-GA-lBR" firstAttribute="top" secondItem="xWr-Zl-WNl" secondAttribute="top" constant="20" id="wzj-7E-zzG"/>
                                             <constraint firstAttribute="trailing" secondItem="Of9-Kc-1FB" secondAttribute="trailing" constant="40" id="z2h-es-Hme"/>
                                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Fkv-YV-QpJ" secondAttribute="trailing" constant="20" symbolic="YES" id="zSb-MT-JiL"/>
@@ -198,9 +197,9 @@
                     <navigationItem key="navigationItem" id="IhO-KA-Phh"/>
                     <connections>
                         <outlet property="addWorkoutButton" destination="Of9-Kc-1FB" id="e0q-bF-Wkm"/>
-                        <outlet property="descriptionTextField" destination="yLZ-Dg-yBz" id="aak-Oe-WLl"/>
                         <outlet property="exercisesTableView" destination="RS7-lb-rca" id="hyt-Do-yJa"/>
                         <outlet property="nameTextField" destination="bTo-tC-UfW" id="1bB-hh-V7P"/>
+                        <outlet property="startWorkoutButton" destination="j42-6i-gar" id="bVg-tN-Aa6"/>
                         <outlet property="targetAreasCollection" destination="VH7-RU-146" id="KHH-1t-VIY"/>
                     </connections>
                 </viewController>
@@ -335,6 +334,7 @@
                     <connections>
                         <outlet property="exerciseNameTextField" destination="XTB-2i-ejf" id="zim-r2-LUz"/>
                         <outlet property="repeatsTextField" destination="x7m-RO-Wye" id="Tyj-yh-rCw"/>
+                        <outlet property="saveExerciseButton" destination="CLO-le-dJw" id="TQ6-Cq-5VL"/>
                         <outlet property="setsTextField" destination="QtB-tA-dAF" id="bOv-aE-g2H"/>
                     </connections>
                 </viewController>
